@@ -49,6 +49,30 @@ module AdsCommon
         result
       end
     end
+
+    # Updates file to include token details.
+    def self.save_oauth2_token(filename, token)
+      config_data = {}
+      if File.exist?(filename)
+        config_data = YAML::load_file(filename)
+        new_file_name = self.find_new_name(filename)
+        File.rename(filename, new_file_name)
+      end
+      config_data[:authentication][:oauth2_token] = token
+      File.open(filename, 'w') {|f| f.write(YAML::dump(config_data))}
+    end
+
+    private
+
+    # Returns an available filename for renaming a given file.
+    def self.find_new_name(old_name)
+      counter = 0
+      begin
+        filename = old_name + '.backup' + ((counter > 0) ? counter.to_s : '')
+        counter += 1
+      end while File.exist?(filename)
+      return filename
+    end
   end
 end
 
