@@ -20,7 +20,9 @@
 #
 # Tests the utils.
 
+require 'tempfile'
 require 'test/unit'
+require 'yaml'
 
 require 'ads_common/utils'
 
@@ -74,5 +76,38 @@ class TestUtils < Test::Unit::TestCase
     assert_equal(:xyz, result[:f5])
     assert_equal(4, result.size)
     assert_not_same(result, data)
+  end
+
+  def test_save_oauth2_token()
+    config_stub = {:authentication => {:method => 'OAuth2'}}
+    token = {:token_key => 'token_value', :token_number => 42}
+    expected_result = {
+      :authentication => {
+        :method => 'OAuth2',
+        :oauth2_token => token.dup
+      }
+    }
+    tmp_file = Tempfile.new('ruby-tests')
+    tmp_file.write(YAML::dump(config_stub))
+    filename = tmp_file.path()
+    tmp_file.close()
+    AdsCommon::Utils.save_oauth2_token(filename, token)
+
+    assert(File.exist?(filename))
+    result = YAML::load_file(filename)
+    assert_equal(expected_result, result)
+    assert(File.exist?(filename + '.backup'))
+    File.unlink(filename + '.backup')
+  end
+
+  def test_find_new_name()
+    tmp_file = Tempfile.new('ruby-tests')
+    name1 = AdsCommon::Utils.find_new_name(tmp_file.path())
+    assert_equal(tmp_file.path() + '.backup', name1)
+    File.open(name1, 'w') do |file1|
+      name2 = AdsCommon::Utils.find_new_name(tmp_file.path())
+      assert_equal(tmp_file.path() + '.backup1', name2)
+    end
+    File.unlink(name1)
   end
 end
