@@ -1,4 +1,5 @@
 0.9.3:
+  - Added support for persisting OAuth2 token.
 
 0.9.2:
   - Fixed issue with boolean value not prefixed in a mixed namespaces case.
